# Shannon

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
clients/python/: .gitignore  CHANGELOG.md  Makefile  PACKAGING.md  README.md  (+2 more)
config/: README.md  agent.yaml  agents.yaml  citation_credibility.yaml  features.yaml  models.yaml  openai_models.yaml  personas.yaml  rate_limits.yaml  research_strategies.yaml  shannon-policy-test.yaml  shannon-test.yaml  shannon.yaml  source_types.yaml
desktop/: .gitignore  README.md  desktop-app-build-guide.md  desktop-app-ios-build.md  desktop-app-windows-build.md  eslint.config.mjs  package-lock.json  package.json
docs/: adding-custom-tools.md  agent-core-api.md  agent-core-architecture.md  api-reference.md  browser-automation-api.md  centralized-pricing.md  changelog.md  context-window-management.md  control-signals.md  environment-configuration.md  event-types.md  extending-shannon.md  learning-router-enhancements.md  llm-service-caching.md  memory-system-architecture.md  migration-gpt5-claude4.md  multi-agent-workflow-architecture.md  multimodal-frontend-integration.md  openai-api-reference.md  openapi-tools.md  p2p-coordination.md  pattern-usage-guide.md  providers-models.md  providers.md  python-code-execution.md  python-wasi-setup.md  rate-aware-budgeting.md  release-process.md  rocky-linux-quickstart.md  scheduled-tasks.md  session-workspaces.md  shannon-default-timeout-configuration.md  skills-system.md  streaming-api.md  streaming-manager-improvements.md  swarm-agents.md  system-prompts.md  task-history-and-timeline.md  task-submission-api.md  template-user-guide.md  (+13 more)
protos/: buf.gen.yaml  buf.yaml
rust/agent-core/: Cargo.toml  Dockerfile  README.md  WASI_SETUP.md  build.rs
rust/agent-core/config/: agent.yaml
rust/agent-core/examples/: wasi_hello.rs
rust/agent-core/src/: config.rs  enforcement.rs  error.rs  firecracker_client.rs  grpc_server.rs  lib.rs  llm_client.rs  main.rs  memory.rs  memory_manager.rs  metrics.rs  proto.rs  safe_commands.rs  sandbox.rs  sandbox_service.rs  tool_cache.rs  tool_registry.rs  tools.rs  tracing.rs  wasi_sandbox.rs  workspace.rs
rust/agent-core/tests/: integration_python_rust.rs  mock_python_server.py  run_integration_tests.sh  stress_test_metrics.rs  test_full_integration.rs  test_prometheus_race.rs  test_sandbox_service.rs  test_tool_registry.rs  test_wasm_cache.rs  tool_calls_sequence.rs
rust/firecracker-executor/: Cargo.toml  Dockerfile
rust/firecracker-executor/guest-agent/: Cargo.toml  Cross.toml
rust/firecracker-executor/guest-agent/.cargo/: config.toml
rust/firecracker-executor/guest-agent/src/: lib.rs  main.rs
rust/firecracker-executor/rootfs/: .gitignore  Dockerfile
rust/firecracker-executor/src/: config.rs  firecracker_api.rs  main.rs  models.rs  vm_pool.rs  vm_runner.rs  vsock_client.rs  workspace_sync.rs
scripts/: README.md  bootstrap_qdrant.sh  build-firecracker-rootfs.sh  create_test_api_key.sql  generate_protos_local.sh  init-qdrant-collections.sh  init_qdrant.sh  install.sh  install_buf.sh  replay_workflow.sh  seed_postgres.sh  setup-remote.sh  setup_python_wasi.sh  signal_team.sh  smoke_e2e.sh  stream_smoke.sh  submit_task.sh  test_control_signals.sh  test_parameter_flow.sh  test_skills_sandbox_e2e.sh  test_stream_filtering.py  test_stream_filtering.sh  validate-templates.sh
tests/: README.md  README_E2E_TESTS.md  run_all_e2e_tests.sh  smoke_test.sh
(+641 files in other folders)
