[package]
name = "firecracker-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
hyper = { version = "1.4", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
uuid = { version = "1.11", features = ["v4"] }
tempfile = "3.14"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

chrono = { version = "0.4", features = ["serde"] }

# Unix socket-based vsock proxy (no kernel vsock dependency needed)
