[package]
name = "guest-agent"
version = "0.1.0"
edition = "2021"
description = "Guest agent for Firecracker microVMs - executes Python code via vsock"

[[bin]]
name = "guest-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vsock = "0.5"
nix = { version = "0.29", features = ["signal"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
